force-app/main/default/objects/Product2/fields/Business_Division__c.field-meta.xml
<CustomField>
    <fullName>Business_Division__c</fullName>
    <label>Business Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BusinessDivisions</valueSetName>
    </valueSet>
</CustomField>