force-app/main/default/objects/Product2/fields/ClassifierCode__c.field-meta.xml
<CustomField>
    <fullName>ClassifierCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classifier Code</label>
    <referenceTo>ProductsClassifier__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>