force-app/main/default/objects/Product2/fields/Dencity__c.field-meta.xml
<CustomField>
    <fullName>Dencity__c</fullName>
    <label>Dencity</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>