force-app/main/default/objects/Product2/fields/ID_ERP__c.field-meta.xml
<CustomField>
    <fullName>ID_ERP__c</fullName>
    <description>ID code of the related record in the ERP system.</description>
    <externalId>true</externalId>
    <inlineHelpText>ID code of the related record in the ERP system.</inlineHelpText>
    <label>ID in ERP</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>