force-app/main/default/objects/Product2/fields/Is_Accessory__c.field-meta.xml
<CustomField>
    <fullName>Is_Accessory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Accessory</label>
    <type>Checkbox</type>
</CustomField>