force-app/main/default/objects/Product2/fields/KindID__c.field-meta.xml
<CustomField>
    <fullName>KindID__c</fullName>
    <formula>ProductKind__r.ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kind ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>