force-app/main/default/objects/Product2/fields/LinearWeightCalculationGroup__c.field-meta.xml
<CustomField>
    <fullName>LinearWeightCalculationGroup__c</fullName>
    <description>Defines how to calculate linear weight for OCTG tubes.</description>
    <inlineHelpText>Only used for OCTG tubes.</inlineHelpText>
    <label>Linear Weight Calculation Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tubing</fullName>
            </value>
            <value>
                <fullName>Casing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>