force-app/main/default/objects/Product2/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CARBON_STEEL</fullName>
                <label>CARBON STEEL</label>
            </value>
            <value>
                <fullName>STAINLESS_STEEL</fullName>
                <label>STAINLESS STEEL</label>
            </value>
            <value>
                <fullName>ALUMINIUM</fullName>
            </value>
            <value>
                <fullName>COPPER</fullName>
            </value>
            <value>
                <fullName>TITANIUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>