force-app/main/default/objects/Product2/fields/NameRus__c.field-meta.xml
<CustomField>
    <fullName>NameRus__c</fullName>
    <description>Product name in Russian</description>
    <inlineHelpText>Product name in Russian</inlineHelpText>
    <label>Product Name (Rus)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>