force-app/main/default/objects/Product2/fields/NameUkr__c.field-meta.xml
<CustomField>
    <fullName>NameUkr__c</fullName>
    <description>Product name in Ukrainian</description>
    <inlineHelpText>Product name in Ukrainian</inlineHelpText>
    <label>Product Name (Ukr)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>