force-app/main/default/objects/Product2/fields/ProductKind__c.field-meta.xml
<CustomField>
    <fullName>ProductKind__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kind of Products</label>
    <referenceTo>ProdKind__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>