force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>Type__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ID_ERP__c</columns>
    <columns>Material__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Product Groups</label>
</ListView>